--- a/LEDb.html
+++ b/LEDb.html
@@ -5,7 +5,7 @@
 <body>
 <div style="width:600px;background:#FFFFFF;border:1px;text-align:center"> <br>
 
-<form action="/cgi-bin/Laba.py" method="POST">
+<form action="/cgi-bin/Labb.py" method="POST">
 <input type="radio" name="PIN" value="17" > LED 1 <br>
 <input type="radio" name="PIN" value="27"> LED 2 <br>
 <input type="radio" name="PIN" value="22"> LED 3 <br>
